# G32_MP

./: .gitignore  README.md
main/: RUN_GUIDE.md  plot_results.py  pyproject.toml  run_experiment.sh
main/main/: RUN_INSTRUCTIONS.md  __init__.py  client_app.py  server_app.py
trial-1/: PROJECT_ANALYSIS.md  README.md  metrics_history.json  pyproject.toml
trial-1/trial_1/: client_app.py  server_app.py  task.py
